--- a/site/style.css
+++ b/site/style.css
@@ -6,14 +6,14 @@ header .navbar-nav > li { padding:0 0px; }
 header .nav > li > a:hover, .nav > li > a:focus { background:none ;  text-decoration: none; color:#009367;   }
 header .mainmenu .navbar-nav .active a {  background:none ;  text-decoration: none; color:#009367;     }
 header .header-top-all.inner {  padding: 15px 0;  border-bottom: 1px solid #cfcfcf;}
-header .home-form-all { background:#fff; padding:15px 0; }
+header .home-form-all { background:#fff; padding:9px 0; }
 header .home-form-all h4 { color:#383838; font-size:30px;  font-family:'Open Sans'; margin:0; padding-top:6px; }
-header .home-form-all .form-in .btn-default { background:#009367; font-size:14px; color:#fff; padding:14px 35px; border-radius:5px; font-family:'Roboto'; font-weight:400;  }
+header .home-form-all .form-in .btn-default { background:#009367; font-size:14px; color:#fff; padding: 14px 34px 13px 34px; border-radius:5px; font-family:'Roboto'; font-weight:400;  }
 header .home-form-all .form-in { margin:10px 0; }
 header .home-form-all .form-in .form-control { background-color: #fff;background-image: none;border: 1px solid #ccc;border-radius: 4px;box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset;color: #555;display: block;font-size: 14px;height: 50px;ine-height: 1.42857;adding: 6px 12px;transition: border-color 0.15s ease-in-out 0s, box-shadow 0.15s ease-in-out 0s;width: 100%;font-family: 'Open Sans'; }
 
 /*holder*/
-.holder { background:#f5f5f5; -webkit-box-shadow: inset 0px 3px 5px 0px rgba(221,221,221,1); -moz-box-shadow: inset 0px 3px 5px 0px rgba(221,221,221,1); box-shadow: inset 0px 3px 5px 0px rgba(221,221,221,1); }
+.holder { background:#f5f5f5; -webkit-box-shadow: inset 0px 3px 5px 0px rgba(221,221,221,1); -moz-box-shadow: inset 0px 3px 5px 0px rgba(221,221,221,1); box-shadow: inset 0px 3px 5px 0px rgba(221,221,221,1); text-align:justify;font-weight: 200;}
 .holder-home-top { background:url(img/others/top-holder.png) no-repeat;  }
 .data-holder { padding:30px 0; }
 .data-holder h3 { color:#192853; font-size:36px; font-family: "Roboto"; font-weight:300;  }
@@ -22,7 +22,7 @@ header .home-form-all .form-in .form-control { background-color: #fff;background
 .training-row p  { color:#999999; font-size:17px; line-height:29px; font-family: "Roboto";  }
 .training-row { padding:25px 0; }
 .data-content {  border-right: 1px solid #cfcfcf;  padding-right: 25px;}
-.data-content.last { border:none; }
+.data-content.last { border:none;padding-right:0px; }
 .blog-heading h3 { color:#192853; font-size:36px; font-family: "Roboto"; font-weight:400;  }
 .blog-heading h3 span { color:#192853; font-size:36px; font-family: "Roboto"; text-transform:uppercase; font-weight:700;  }
 .blog-text h4 { color:#192853; font-size:24px; font-family: "Roboto";  padding-top:0px;   }
@@ -78,6 +78,8 @@ footer { background:url(img/others/footer-image.png) no-repeat 0 0 #cdf1ff; padd
 footer p { margin:0; color:#7d7d7d; font-size:15px; font-family:'Open Sans';  }
 footer .foot-menu ul li a { margin:0; color:#7d7d7d; font-size:15px; font-family:'Open Sans'; text-decoration:none;  }
 footer .foot-copy p a { color:#7d7d7d; text-decoration:none; }
+
+#mc-embedded-subscribe {	margin: 0 !important;}
 
 
 /*Resposnive*/
