--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ header .home-form-all .form-in .form-control { background-color: #fff;background
 
 /*holder*/
 .holder { background:#f5f5f5; -webkit-box-shadow: inset 0px 3px 5px 0px rgba(221,221,221,1); -moz-box-shadow: inset 0px 3px 5px 0px rgba(221,221,221,1); box-shadow: inset 0px 3px 5px 0px rgba(221,221,221,1); text-align:justify;font-weight: 200;}
-.holder-home-top { background:url(img/others/top-holder.png) no-repeat;  }
+.holder-home-top { background:url(../img/top-holder.png) no-repeat;  }
 .data-holder { padding:30px 0; }
 .data-holder h3 { color:#192853; font-size:36px; font-family: "Roboto"; font-weight:300;  }
 .data-holder p  { color:#999999; font-size:17px; line-height:29px; font-family: "Roboto";  }
@@ -36,7 +36,7 @@ header .home-form-all .form-in .form-control { background-color: #fff;background
 .blog-text .row.sp { padding-bottom:15px; }
 .blog-text .row.sp h4 { margin-left:10px; }
 .holder-blog .row.sp1 { padding-bottom:75px; }
-.holder-blog { background:url(img/others/bottom-holder.png) no-repeat 100% 100%; }
+.holder-blog { background:url(../img/bottom-holder.png) no-repeat 100% 100%; }
 .blog-heading .img-responsive { margin-left:auto; margin-right:auto; display:block; }
 
 /*about-page*/
@@ -54,7 +54,7 @@ header .home-form-all .form-in .form-control { background-color: #fff;background
 
 /*book*/
 .mail-list-holder { background:#cbf2ff;  }
-.mail-list-holder .mail-content { background:url(img/others/book-form.png) no-repeat; padding:20px 0; }
+.mail-list-holder .mail-content { background:url(../img/book-form.png) no-repeat; padding:20px 0; }
 .mail-list-holder h3 { color:#383838; font-size:32px; font-family: "Roboto"; margin-top:0; font-weight:400; }
 .mail-form .form-control { background-color: #cbf2ff;background-image: none;border: 1px solid #192853;border-radius: 4px;box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset;color: #555;display: block;font-size: 14px;height: 50px;ine-height: 1.42857;adding: 6px 12px;transition: border-color 0.15s ease-in-out 0s, box-shadow 0.15s ease-in-out 0s;width: 100%;font-family: 'Open Sans'; }
 .mail-form .btn-default { background:#192853; font-size:15px; color:#fff; padding:14px 25px; width:250px; border:none; font-family: "Roboto"; }
@@ -71,18 +71,18 @@ header .home-form-all .form-in .form-control { background-color: #fff;background
 .book-tab-content .blue { color:#192853; font-size:18px; font-weight:400; font-family:'Roboto'; padding-left:20px; margin-bottom:15px;  }
 .book-tab-content .grey { color:#999999;   font-size:18px; font-weight:400; font-family:'Roboto'; }
 .book-tab-content tr th { border:none !important; }
-.book-tab-content p { color:#192853; font-size:18px; font-weight:400; font-family:'Roboto'; background:url(img/others/square.png) no-repeat 0 18px; padding-left:20px; margin-bottom:15px;  }
+.book-tab-content p { color:#192853; font-size:18px; font-weight:400; font-family:'Roboto'; background:url(../img/square.png) no-repeat 0 18px; padding-left:20px; margin-bottom:15px;  }
 
 
 /* video-training */
 
 .btn.bottom-video-btn { background-color: #34c6ce;  border-radius: 50px;  color: #fff;  font-size: 20px; font-family:"AvenirNextLTProRegular"; padding: 10px 30px !important;}
-.video-training-holder { box-shadow: 0 3px 5px 0 rgba(221, 221, 221, 1) inset; background: rgba(0, 0, 0, 0) url("img/others/body-bg.jpg") no-repeat scroll 0 0 / cover ; padding: 70px 0px 80px;}
+.video-training-holder { box-shadow: 0 3px 5px 0 rgba(221, 221, 221, 1) inset; background: rgba(0, 0, 0, 0) url("../img/body-bg.jpg") no-repeat scroll 0 0 / cover ; padding: 70px 0px 80px;}
 .video-training-holder .main-section .main-contents .top-contents h3 { color: #182752; font-size: 34px; margin-top: 0; font-family:"AvenirNextLTProRegular"; }
 .video-training-holder .main-section .main-contents .top-contents h5 { color: #5fbfc9; font-family: "Open Sans"; font-size: 16px; line-height:1.5;}
 .video-training-holder .main-section .main-contents .top-contents > p { color: #767676; font-family: "Open Sans"; font-size: 16px; line-height: 1.8; padding: 20px 0; text-align:justify; }
 .video-training-holder .main-section .main-contents .list-contents { padding-top: 20px; }
-.video-training-holder .main-section .main-contents .list-contents ul li {background: rgba(0, 0, 0, 0) url("img/others/list-arrow.png") no-repeat scroll left 6px; color: #8f8f8f; font-family: "Open Sans"; font-size: 16px; padding: 0 0 5px 16px; }
+.video-training-holder .main-section .main-contents .list-contents ul li {background: rgba(0, 0, 0, 0) url("../img/list-arrow.png") no-repeat scroll left 6px; color: #8f8f8f; font-family: "Open Sans"; font-size: 16px; padding: 0 0 5px 16px; }
 
 .video-training-holder .main-section .video-contents .video-frame  iframe { -webkit-box-shadow: 0px 0px 8px 0px rgba(185,183,183,1); -moz-box-shadow: 0px 0px 8px 0px rgba(185,183,183,1); box-shadow: 0px 0px 8px 0px rgba(185,183,183,1); padding: 10px; height: 443px; }
 .video-training-holder .main-section .video-contents .video-btn { margin-top: 30px; text-align: center; }
@@ -97,16 +97,16 @@ header .home-form-all .form-in .form-control { background-color: #fff;background
 .tab-holder ul.tabs { height: 50px; }
 .tab-holder ul.tabs li { font-size: 22px; color:#fff; height: 50px; padding: 10px 20px; border-radius: 2px; font-family:"AvenirNextLTProRegular"; }
 .tab-holder ul.tabs li.list-1 { background-color:#354368; border: 1px solid #354368; } 
-.tab-holder ul.tabs li.list-1::after { background: rgba(0, 0, 0, 0) url("img/others/list-overlay-1.png") no-repeat scroll center center; content: ""; display: inline-block; height: 16px; left: 0; position: absolute; right: 0; top: 46px; width: 100%; z-index: 100; }
+.tab-holder ul.tabs li.list-1::after { background: rgba(0, 0, 0, 0) url("../img/list-overlay-1.png") no-repeat scroll center center; content: ""; display: inline-block; height: 16px; left: 0; position: absolute; right: 0; top: 46px; width: 100%; z-index: 100; }
 .tab-holder ul.tabs li.list-2 { background-color:#32b3e0; border: 1px solid #32b3e0; margin-left: 10px; }
-.tab-holder ul.tabs li.list-2::after { background: rgba(0, 0, 0, 0) url("img/others/list-overlay-2.png") no-repeat scroll center center; content: "";  display: inline-block; height: 16px; left: 0; position: absolute; right: 0; top: 46px; width: 100%; z-index: 100; }
+.tab-holder ul.tabs li.list-2::after { background: rgba(0, 0, 0, 0) url("../img/list-overlay-2.png") no-repeat scroll center center; content: "";  display: inline-block; height: 16px; left: 0; position: absolute; right: 0; top: 46px; width: 100%; z-index: 100; }
 .corporate-holder .tab-holder .agile-heading > h3 { color: #354368; font-size: 24px; font-family:"AvenirNextLTProRegular"; } 
 .corporate-holder .tab-holder .common-box { padding-top: 30px; }
 .corporate-holder .tab-holder .common-box.expected-holder,.course-overview-holder { padding-top: 10px !important; }
 .corporate-holder .tab-holder .common-box  h5 { color: #5fbfc9; font-size: 22px; font-family:"AvenirNextLTProRegular"; }
 .corporate-holder .tab-holder .common-box p, li { color: #767676; font-family: "Open Sans"; font-size: 17px; line-height: 1.6; text-align: justify; overflow: visible !important; }
 .corporate-holder .tab-holder .common-box  li { padding-bottom: 10px; }
-.corporate-holder .tab-holder .common-box.learning-promise-holder ul li { background: rgba(0, 0, 0, 0) url("img/others/corporate-list-arrow.png") no-repeat scroll left 8px; padding-left: 20px; } 
+.corporate-holder .tab-holder .common-box.learning-promise-holder ul li { background: rgba(0, 0, 0, 0) url("../img/corporate-list-arrow.png") no-repeat scroll left 8px; padding-left: 20px; }
 
 
 /*Cannabidiol (CBD)*/
@@ -123,7 +123,7 @@ header .header-bottom-cbd h3 { color: #1a2954; font-size: 28px; text-transform: 
 
 
 /*footer*/
-footer { background:url(img/others/footer-image.png) no-repeat 0 0 #cdf1ff; padding:35px 0 40px; }
+footer { background:url(../img/footer-image.png) no-repeat 0 0 #cdf1ff; padding:35px 0 40px; }
 footer p { margin:0; color:#7d7d7d; font-size:15px; font-family:'Open Sans';  }
 footer .foot-menu ul li a { margin:0; color:#7d7d7d; font-size:15px; font-family:'Open Sans'; text-decoration:none;  }
 footer .foot-copy p a { color:#7d7d7d; text-decoration:none; }
@@ -218,8 +218,8 @@ footer .foot-copy p a { margin:0; color:#7d7d7d; font-size:13px; font-family:'Op
 .corporate-holder .tab-holder .agile-heading > h3 {	font-size: 23px; }
 .tab-holder ul.tabs li.list-2 {	margin-left: 0px; }
 .corporate-holder .tab-holder .common-box p, li { text-align: left;	}
-.tab-holder .tab_container h3.d_active::after { background: rgba(0, 0, 0, 0) url("img/others/list-overlay-1.png") no-repeat scroll center center !important; content: ""; display: inline-block; height: 16px; left: 0;	position: relative;	right: 0;	top: 24px;	width: 100%; z-index: 100;	}
-.tab-holder .tab_container h3.tab_drawer_heading::after {	background: rgba(0, 0, 0, 0) url("img/others/list-overlay-2.png") no-repeat scroll center center; content: ""; display: inline-block; height: 16px;	left: 0; position: relative;	right: 0; top: 24px; width: 100%; z-index: 100; }
+.tab-holder .tab_container h3.d_active::after { background: rgba(0, 0, 0, 0) url("../img/list-overlay-1.png") no-repeat scroll center center !important; content: ""; display: inline-block; height: 16px; left: 0;	position: relative;	right: 0;	top: 24px;	width: 100%; z-index: 100;	}
+.tab-holder .tab_container h3.tab_drawer_heading::after {	background: rgba(0, 0, 0, 0) url("../img/list-overlay-2.png") no-repeat scroll center center; content: ""; display: inline-block; height: 16px;	left: 0; position: relative;	right: 0; top: 24px; width: 100%; z-index: 100; }
 
 /*Cannabidiol (CBD)*/
 header .header-bottom-cbd h3 { font-size: 19px; }
