--- a/css/style.css
+++ b/css/style.css
@@ -251,7 +251,7 @@ header .header-bottom-cbd h3 { font-size: 19px; }
 
 /*TALKS*/
 
-.talks-holder .talks-heading h3,.talks-holder .talks-contents h3,.talks-holder .video-holder .video-heading h3 { color: #182752; font-size: 34px; font-family:"AvenirNextLTProRegular"; margin: 0px; }
+.talks-holder .talks-heading h3,.talks-holder .talks-contents h3,.talks-holder-bottom .video-holder .video-heading h3 { color: #182752; font-size: 34px; font-family:"AvenirNextLTProRegular"; margin: 0px; }
 .talks-holder .talks-heading {  padding: 30px 0;}
 .talks-holder .talks-description-holder {  padding-bottom: 70px;}
 .talks-holder .talks-contents p {  color: #4c4c4c;  font-family: "Open Sans";  font-size: 15px;  line-height: 1.8;}
@@ -268,5 +268,5 @@ header .header-bottom-cbd h3 { font-size: 19px; }
 .talks-holder-bottom .calendar-holder .calendar-table td.date,th.date {  font-size: 18px; padding-left:0px !important;}
 .talks-holder-bottom .calendar-holder .calendar-table th { color: #192853; }
 .talks-holder-bottom .calendar-holder .calendar-box #extcal_minical {  margin-top: 30px;}
-.talks-holder .video-holder {  padding: 30px 0;}
-.talks-holder .video-holder .video-box {  padding-top: 20px;}
+.talks-holder-bottom .video-holder {  padding: 30px 0;}
+.talks-holder-bottom .video-holder .video-box {  padding-top: 20px;}
